<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".FormCadastro">


    <TextView
        android:id="@+id/title_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />


    <View
        android:id="@+id/containercomponens"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_cadastro"
    />


    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:autofillHints=""
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/containercomponens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

  
    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/email"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />


    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:autofillHints=""
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/eye_24"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />
  
    
    <!--Button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastro"
        android:text="@string/cadastrar"
        style="@style/button"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containercomponens"
        tools:ignore="TextSizeCheck"
    />


</androidx.constraintlayout.widget.ConstraintLayout>