<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".FormLogin">

  <ImageView
      android:id="@+id/logo"
      android:layout_width="197dp"
      android:layout_height="218dp"
      android:layout_marginTop="64dp"
      android:contentDescription="@string/logo"
      android:src="@drawable/ic_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/containercomponens"
      style="@style/ContainerComponents"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/logo"
  />

  <EditText
      android:id="@+id/edit_email_login"
      style="@style/Edit_Text"
      android:autofillHints=""
      android:hint="@string/email"
      android:drawableEnd="@drawable/email"
      app:layout_constraintStart_toStartOf="@+id/containercomponens"
      app:layout_constraintEnd_toEndOf="@+id/containercomponens"
      app:layout_constraintTop_toTopOf="@+id/containercomponens"
      android:maxLength="35"
      android:inputType="textEmailAddress"
  />


  <EditText
      android:id="@+id/edit_senha_login"
      style="@style/Edit_Text"
      android:autofillHints=""
      android:hint="@string/senha"
      android:drawableEnd="@drawable/album"
      app:layout_constraintStart_toStartOf="@+id/containercomponens"
      app:layout_constraintEnd_toEndOf="@+id/containercomponens"
      app:layout_constraintTop_toBottomOf="@+id/edit_email_login"
      android:maxLength="25"
      android:inputType="textEmailAddress"
  />


  <!-- Button -->
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_entrada"
      android:text="@string/entrar"
      style="@style/button"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_senha_login"
      />

  <ProgressBar
      android:id="@+id/progressbar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:visibility="invisible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/containercomponens"
  />
  
  
  <TextView
      android:id="@+id/text_tela_cadastro"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_cadastro"
      app:layout_constraintTop_toTopOf="@+id/progressbar"
      android:textSize="18sp"
      android:textColor="@color/white"
      android:textStyle="bold"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="30dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progressbar"
      app:layout_constraintEnd_toEndOf="parent"
  />



 <!-- <LinearLayout
      android:id="@+id/containercomponents"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp"
      app:layout_constraintTop_toBottomOf="@id/logo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <EditText
        android:id="@+id/edit_email_login"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:drawableRight="@drawable/ic_email"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:maxLength="50" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:drawableRight="@drawable/ic_visibility"
        android:hint="Senha"
        android:inputType="textPassword"
        android:maxLength="25"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:text="Entrar"
        android:textColor="@android:color/white" />
  </LinearLayout>
  -->
</androidx.constraintlayout.widget.ConstraintLayout>
